AudioPlayer fixes + polish
- PocketMan.cs -
Renamed form Form1 to PocketMan for clarity, updated links appropriately in Program.cs

- AudioPlayer -

Fixed "Stop" button when playing WAV file; added status text when idle.
Added WAV file filter to openFileDialog method.
Fixed exception when selecting invalid wav file; after selecting file, SoundPlayer instance now checks file type before loading as wav stream

- Info -

Added development info

- Designer -

Bold text on AudioPlayer titles

--- a/PocketMan/PocketMan.csproj
+++ b/PocketMan/PocketMan.csproj
@@ -56,28 +56,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DirectorySelectorForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DirectorySelectorForm.Designer.cs">
-      <DependentUpon>DirectorySelectorForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="PocketMan.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+      <DependentUpon>PocketMan.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs">
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DirectorySelectorForm.resx">
-      <DependentUpon>DirectorySelectorForm.cs</DependentUpon>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>PocketMan.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-      <SubType>Designer</SubType>
+    <EmbeddedResource Include="PocketMan.resx">
+      <DependentUpon>PocketMan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
